files/duckhunt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: duckhunt-js
    app.kubernetes.io/component: duckhunt-js
    app.kubernetes.io/instance: duckhunt-js
  name: duckhunt-js
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: duckhunt-js
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: duckhunt-js
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/default/duckhunt-js@sha256:e4d52b67b4f918f6577022296a10c5d6705c894133d82548249355fa62647680
        imagePullPolicy: IfNotPresent
        name: duckhunt-js
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
